hotmoka/io-takamaka-examples/src/main/java/io/takamaka/tests/errors/legalstaticinitialization1/C.java
package io.takamaka.tests.errors.legalstaticinitialization1;

public class C {
	public final static int i = 13; // legal with final
}